Alteraçao nas propriedades CSS

--- a/Fundamentos/bloco-03-introducao-a-html-e-css/dia-02-html-e-css-primeiros-passos-em-css/index.html
+++ b/Fundamentos/bloco-03-introducao-a-html-e-css/dia-02-html-e-css-primeiros-passos-em-css/index.html
@@ -8,16 +8,41 @@
         h1 {
             font-size: 65px;
             color: orange;
+            font-family: sans-serif;
+            text-decoration: underline overline;
         }
 
         ul {
             background-color: paleturquoise;
+            font-style: italic;
+            line-height: 30px;
         }
 
         .paragraph-list {
             background-color: lightgreen;
         }
 
+        p {
+            font-weight: 600;
+            font-size: 3em;
+            text-align: center;
+        }
+
+        body {
+            font-size: 16px;
+        }
+
+        #amarelo {
+            background-color: yellow;
+        }
+
+        #vermelho {
+            background-color: red;
+        }
+
+        #marrom {
+            background-color: brown;
+        }
     </style>
 </head>
 
@@ -25,9 +50,9 @@
     <h1>Exercícios 3.2</h1>
     <p class="paragraph-list">Qual é a sua cor favorita?</p>
     <ul class="paragraph-list">
-        <li>Amarelo</li>
-        <li>Vermelho</li>
-        <li>Marrom</li>
+        <li id="amarelo">Amarelo</li>
+        <li id="vermelho">Vermelho</li>
+        <li id="marrom">Marrom</li>
     </ul>
 </body>
 
