--- a/Fundamentos/bloco-03-introducao-a-html-e-css/dia-04-html-semantico/index.html
+++ b/Fundamentos/bloco-03-introducao-a-html-e-css/dia-04-html-semantico/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ranking</title>
     <style>
+        * {
+            padding: 0%;
+            margin: 0%;
+        }
         h1 {
             text-align: center;
         }
@@ -16,6 +20,9 @@
             height: 50px;
             text-align: center;
             width: 200px;
+            list-style: none;
+            position: relative;
+            left: 11%;
         }
 
         .second {
@@ -24,6 +31,8 @@
             height: 50px;
             text-align: center;
             width: 300px;
+            display: inline-block;
+            list-style: none;
         }
 
         .third {
@@ -32,13 +41,33 @@
             height: 50px;
             text-align: center;
             width: 300px;
+            display: inline-block;
+            list-style: none;
+        }
+
+        .premiações {
+            text-align: center;
+        }
+
+        .premiações li {
+            list-style: none;
+            margin-bottom: 15px;
+        }
+
+        .premiações h3 {
+            margin-bottom: 15px;
+        }
+
+        #title {
+            margin-top: 20px;
+            margin-bottom: 20px;
         }
     </style>
 </head>
 
 <body>
     <header>
-        <h1>Hackathon Results</h1>
+        <h1 id="title">Hackathon Results</h1>
     </header>
     <section>
         <ul>
@@ -47,7 +76,7 @@
             <li class="third">3º - Equipe 3</li>
         </ul>
     </section>
-    <section>
+    <section class="premiações">
         <h3>Premiação Primeiro Lugar:</h3>
         <ul>
             <li>| R$ 1000,00 por integrante da equipe |</li>
