--- a/Fundamentos/bloco-03-introducao-a-html-e-css/dia-04-html-semantico/index.html
+++ b/Fundamentos/bloco-03-introducao-a-html-e-css/dia-04-html-semantico/index.html
@@ -22,7 +22,7 @@
             width: 200px;
             list-style: none;
             position: relative;
-            left: 11%;
+            left: 820px;
         }
 
         .second {
@@ -33,6 +33,8 @@
             width: 300px;
             display: inline-block;
             list-style: none;
+            position: absolute;
+            left: 620px;
         }
 
         .third {
@@ -43,10 +45,14 @@
             width: 300px;
             display: inline-block;
             list-style: none;
+            position: absolute;
+            left: 50%;
         }
 
         .premiações {
             text-align: center;
+            position: relative;
+            top: 80px;
         }
 
         .premiações li {
