--- a/Fundamentos/bloco-03-introducao-a-html-e-css/dia-04-html-semantico/Exercicio-02/index.html
+++ b/Fundamentos/bloco-03-introducao-a-html-e-css/dia-04-html-semantico/Exercicio-02/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
 
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width" />
+  <link rel="stylesheet" href="style.css">
+  <title>Fatos Sobre o Stomatopoda</title>
 </head>
 
 <body>
@@ -12,14 +14,20 @@
   </header>
 
   <nav>
-    <h3>Página Inicial</h3>
-    <h3>Sobre</h3>
-    <h3>Contato</h3>
+    <h2>Página Inicial</h2>
+    <h2>Sobre</h2>
+    <h2>Contato</h2>
   </nav>
 
   <article>
     <section>
       <h2>Fatos sobre o Stomatopoda</h2>
+
+      <ul>
+        <li>Existem mais de 500 espécies de camarões mantis.</li>
+        <li>O camarão mantis maduro médio tem cerca de 10 centímetros (3,9 polegadas) de comprimento.</li>
+        <li>Estomatopodes têm a visão mais complexa no reino animal.</li>
+      </ul>
     </section>
 
     <section>
@@ -30,8 +38,66 @@
         espécies, caracterizadas principalmente pela morfologia da segunda pata torácica, que é modificada
         em apêndice subquelado, lembrando uma pata de louva-a-deus.
       </p>
+
+      <table>
+        <tr>
+          <th>Reino</th>
+          <th>Filo</th>
+          <th>Subfilo</th>
+          <th>Classe</th>
+          <th>Subclasse</th>
+          <th>Ordem</th>
+        </tr>
+        <tr>
+          <td>Animalia</td>
+          <td>Arthropoda</td>
+          <td>Crustacea</td>
+          <td>Malacostraca</td>
+          <td>Hoplocarida</td>
+          <td><strong>Stomatopoda</strong> Latreille, 1817</td>
+        </tr>
+      </table>
+    </section>
+
+    <section>
+      <p>Existem mais de 500 espécies de camarões mantis em uma variedade de tamanhos e cores do arco-íris.
+        Como outros crustáceos, o camarão mantis tem uma carapaça ou casca. Suas cores variam de marrom a tons
+        de arco-íris vívidos.</p>
+
+      <img id="cor" src="./cor-stomatopoda.jpg" alt="Cor do Stomatopoda">
+    </section>
+
+    <section>
+      <p>O camarão mantis maduro médio tem cerca de 10 centímetros (3,9 polegadas) de comprimento, mas
+        alguns chegam a 38 centímetros (15 polegadas). Um deles foi documentado até 46 centímetros (18 polegadas).</p>
+
+      <img id="tamanho" src="./tamanho-stomatopoda.jpg" alt="Caracterísitcas do corpo do Stomatopoda">
+    </section>
+
+    <section>
+      <p>O camarão mantis tem olhos compostos montados em caules e pode girá-los independentemente um
+        do outro para examinar seus arredores. Enquanto os humanos têm três tipos de fotorreceptores,
+        os olhos de um camarão mantis têm entre 12 e 16 tipos de células fotorreceptoras. Algumas espécies
+        podem até ajustar a sensibilidade de sua visão de cores.</p>
+
+      <img id="olhos" src="./olhos-stomatopoda.jpg" alt="Olhos do Stomatopoda">
     </section>
   </article>
+
+  <aside>
+    <h2>Veja o Stomatopoda em Ação</h2>
+    <a href="https://www.youtube.com/watch?v=E0Li1k5hGBE&ab_channel=NatGeoWILD" target="_blank" rel="noopener noreferrer">Mantis Shrimp Packs a Punch | Predator in Paradise</a>
+  </aside>
+
+  <section>
+    <h2>Referências</h2>
+    <a href="https://pt.wikipedia.org/wiki/Stomatopoda" target="_blank" rel="noopener noreferrer">wikipedia-Stomatopoda</a>
+    <a href="https://ao.figgysfoodtruck.com/2076-mantis-shrimp-facts-stomatopoda.html" target="_blank" rel="noopener noreferrer">Figgys-Fatos sobre Camarão Mantis</a>
+  </section>
+
+  <footer>
+    <p>Conteúdo compilado por Degemar Pereira da Silva, 2021</p>
+  </footer>
 </body>
 
 </html>
