Adicionando as primeiras estilizaçoes

--- a/Fundamentos/bloco-03-introducao-a-html-e-css/dia-04-html-semantico/Exercicio-02/index.html
+++ b/Fundamentos/bloco-03-introducao-a-html-e-css/dia-04-html-semantico/Exercicio-02/index.html
@@ -2,102 +2,109 @@
 <html lang="pt-br">
 
 <head>
-  <meta charset="UTF-8"/>
+  <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width" />
   <link rel="stylesheet" href="style.css">
   <title>Fatos Sobre o Stomatopoda</title>
 </head>
 
 <body>
-  <header>
+  <header id="cabecalho">
     <h1>Soco a 80mk/h: Conheça o Stomatopoda</h1>
   </header>
 
-  <nav>
-    <h2>Página Inicial</h2>
-    <h2>Sobre</h2>
-    <h2>Contato</h2>
+  <nav id="menu">
+    <ul>
+      <li>Página Inicial</li>
+      <li>Sobre</li>
+      <li>Contato</li>
+    </ul>
   </nav>
 
-  <article>
-    <section>
-      <h2>Fatos sobre o Stomatopoda</h2>
+  <main>
+    <article id="artigo">
+      <section id="fatos">
+        <h2>Fatos sobre o Stomatopoda</h2>
 
-      <ul>
-        <li>Existem mais de 500 espécies de camarões mantis.</li>
-        <li>O camarão mantis maduro médio tem cerca de 10 centímetros (3,9 polegadas) de comprimento.</li>
-        <li>Estomatopodes têm a visão mais complexa no reino animal.</li>
-      </ul>
+        <ul>
+          <li>Existem mais de 500 espécies de camarões mantis.</li>
+          <li>O camarão mantis maduro médio tem cerca de 10 centímetros (3,9 polegadas) de comprimento.</li>
+          <li>Estomatopodes têm a visão mais complexa no reino animal.</li>
+        </ul>
+      </section>
+
+      <section id="sobre">
+        <h2>Sobre o Stomatopoda</h2>
+        <p>
+          Stomatopoda (ou estomatópode), chamados popularmente de tamarutacas ou de lacraias-do-mar no
+          Brasil, é uma ordem de crustáceos marinhos da subclasse Hoplocarida, que agrupa cerca de 400
+          espécies, caracterizadas principalmente pela morfologia da segunda pata torácica, que é modificada
+          em apêndice subquelado, lembrando uma pata de louva-a-deus.
+        </p>
+
+        <table>
+          <tr>
+            <th>Reino</th>
+            <th>Filo</th>
+            <th>Subfilo</th>
+            <th>Classe</th>
+            <th>Subclasse</th>
+            <th>Ordem</th>
+          </tr>
+          <tr>
+            <td>Animalia</td>
+            <td>Arthropoda</td>
+            <td>Crustacea</td>
+            <td>Malacostraca</td>
+            <td>Hoplocarida</td>
+            <td><strong>Stomatopoda</strong> Latreille, 1817</td>
+          </tr>
+        </table>
+      </section>
+
+      <section>
+        <p>Existem mais de 500 espécies de camarões mantis em uma variedade de tamanhos e cores do arco-íris.
+          Como outros crustáceos, o camarão mantis tem uma carapaça ou casca. Suas cores variam de marrom a tons
+          de arco-íris vívidos.</p>
+
+        <img id="cor" src="./cor-stomatopoda.jpg" alt="Cor do Stomatopoda">
+      </section>
+
+      <section>
+        <p>O camarão mantis maduro médio tem cerca de 10 centímetros (3,9 polegadas) de comprimento, mas
+          alguns chegam a 38 centímetros (15 polegadas). Um deles foi documentado até 46 centímetros (18 polegadas).</p>
+
+        <img id="tamanho" src="./tamanho-stomatopoda.jpg" alt="Caracterísitcas do corpo do Stomatopoda">
+      </section>
+
+      <section>
+        <p>O camarão mantis tem olhos compostos montados em caules e pode girá-los independentemente um
+          do outro para examinar seus arredores. Enquanto os humanos têm três tipos de fotorreceptores,
+          os olhos de um camarão mantis têm entre 12 e 16 tipos de células fotorreceptoras. Algumas espécies
+          podem até ajustar a sensibilidade de sua visão de cores.</p>
+
+        <img id="olhos" src="./olhos-stomatopoda.jpg" alt="Olhos do Stomatopoda">
+      </section>
+    </article>
+
+    <aside>
+      <h2>Veja o Stomatopoda em Ação</h2>
+      <a href="https://www.youtube.com/watch?v=E0Li1k5hGBE&ab_channel=NatGeoWILD" target="_blank"
+        rel="noopener noreferrer">Mantis Shrimp Packs a Punch | Predator in Paradise</a>
+    </aside>
+
+    <section>
+      <h2>Referências</h2>
+      <a href="https://pt.wikipedia.org/wiki/Stomatopoda" target="_blank"
+        rel="noopener noreferrer">wikipedia-Stomatopoda</a>
+      <a href="https://ao.figgysfoodtruck.com/2076-mantis-shrimp-facts-stomatopoda.html" target="_blank"
+        rel="noopener noreferrer">Figgys-Fatos sobre Camarão Mantis</a>
     </section>
 
-    <section>
-      <h2>Sobre o Stomatopoda</h2>
-      <p>
-        Stomatopoda (ou estomatópode), chamados popularmente de tamarutacas ou de lacraias-do-mar no
-        Brasil, é uma ordem de crustáceos marinhos da subclasse Hoplocarida, que agrupa cerca de 400
-        espécies, caracterizadas principalmente pela morfologia da segunda pata torácica, que é modificada
-        em apêndice subquelado, lembrando uma pata de louva-a-deus.
-      </p>
-
-      <table>
-        <tr>
-          <th>Reino</th>
-          <th>Filo</th>
-          <th>Subfilo</th>
-          <th>Classe</th>
-          <th>Subclasse</th>
-          <th>Ordem</th>
-        </tr>
-        <tr>
-          <td>Animalia</td>
-          <td>Arthropoda</td>
-          <td>Crustacea</td>
-          <td>Malacostraca</td>
-          <td>Hoplocarida</td>
-          <td><strong>Stomatopoda</strong> Latreille, 1817</td>
-        </tr>
-      </table>
-    </section>
-
-    <section>
-      <p>Existem mais de 500 espécies de camarões mantis em uma variedade de tamanhos e cores do arco-íris.
-        Como outros crustáceos, o camarão mantis tem uma carapaça ou casca. Suas cores variam de marrom a tons
-        de arco-íris vívidos.</p>
-
-      <img id="cor" src="./cor-stomatopoda.jpg" alt="Cor do Stomatopoda">
-    </section>
-
-    <section>
-      <p>O camarão mantis maduro médio tem cerca de 10 centímetros (3,9 polegadas) de comprimento, mas
-        alguns chegam a 38 centímetros (15 polegadas). Um deles foi documentado até 46 centímetros (18 polegadas).</p>
-
-      <img id="tamanho" src="./tamanho-stomatopoda.jpg" alt="Caracterísitcas do corpo do Stomatopoda">
-    </section>
-
-    <section>
-      <p>O camarão mantis tem olhos compostos montados em caules e pode girá-los independentemente um
-        do outro para examinar seus arredores. Enquanto os humanos têm três tipos de fotorreceptores,
-        os olhos de um camarão mantis têm entre 12 e 16 tipos de células fotorreceptoras. Algumas espécies
-        podem até ajustar a sensibilidade de sua visão de cores.</p>
-
-      <img id="olhos" src="./olhos-stomatopoda.jpg" alt="Olhos do Stomatopoda">
-    </section>
-  </article>
-
-  <aside>
-    <h2>Veja o Stomatopoda em Ação</h2>
-    <a href="https://www.youtube.com/watch?v=E0Li1k5hGBE&ab_channel=NatGeoWILD" target="_blank" rel="noopener noreferrer">Mantis Shrimp Packs a Punch | Predator in Paradise</a>
-  </aside>
-
-  <section>
-    <h2>Referências</h2>
-    <a href="https://pt.wikipedia.org/wiki/Stomatopoda" target="_blank" rel="noopener noreferrer">wikipedia-Stomatopoda</a>
-    <a href="https://ao.figgysfoodtruck.com/2076-mantis-shrimp-facts-stomatopoda.html" target="_blank" rel="noopener noreferrer">Figgys-Fatos sobre Camarão Mantis</a>
-  </section>
-
-  <footer>
-    <p>Conteúdo compilado por Degemar Pereira da Silva, 2021</p>
-  </footer>
+    <footer>
+      <p>Conteúdo compilado por Degemar Pereira da Silva, 2021</p>
+    </footer>
+  </main>
 </body>
 
 </html>
