--- a/Fundamentos/bloco-03-introducao-a-html-e-css/dia-04-html-semantico/Exercicio-02/index.html
+++ b/Fundamentos/bloco-03-introducao-a-html-e-css/dia-04-html-semantico/Exercicio-02/index.html
@@ -15,9 +15,9 @@
 
   <nav id="menu">
     <ul>
-      <li>Página Inicial</li>
-      <li>Sobre</li>
-      <li>Contato</li>
+      <li><a href="#fatos">Página Inicial</a></li>
+      <li><a href="#sobre">Sobre</a></li>
+      <li><a href="#rodape">Contato</a></li>
     </ul>
   </nav>
 
@@ -62,38 +62,38 @@
         </table>
       </section>
 
-      <section>
+      <section id="fato1">
         <p>Existem mais de 500 espécies de camarões mantis em uma variedade de tamanhos e cores do arco-íris.
           Como outros crustáceos, o camarão mantis tem uma carapaça ou casca. Suas cores variam de marrom a tons
           de arco-íris vívidos.</p>
 
-        <img id="cor" src="./cor-stomatopoda.jpg" alt="Cor do Stomatopoda">
+        <img src="./cor-stomatopoda.jpg" alt="Cor do Stomatopoda">
       </section>
 
-      <section>
+      <section id="fato2">
         <p>O camarão mantis maduro médio tem cerca de 10 centímetros (3,9 polegadas) de comprimento, mas
           alguns chegam a 38 centímetros (15 polegadas). Um deles foi documentado até 46 centímetros (18 polegadas).</p>
 
-        <img id="tamanho" src="./tamanho-stomatopoda.jpg" alt="Caracterísitcas do corpo do Stomatopoda">
+        <img src="./tamanho-stomatopoda.jpg" alt="Caracterísitcas do corpo do Stomatopoda">
       </section>
 
-      <section>
+      <section id="fato3">
         <p>O camarão mantis tem olhos compostos montados em caules e pode girá-los independentemente um
           do outro para examinar seus arredores. Enquanto os humanos têm três tipos de fotorreceptores,
           os olhos de um camarão mantis têm entre 12 e 16 tipos de células fotorreceptoras. Algumas espécies
           podem até ajustar a sensibilidade de sua visão de cores.</p>
 
-        <img id="olhos" src="./olhos-stomatopoda.jpg" alt="Olhos do Stomatopoda">
+        <img src="./olhos-stomatopoda.jpg" alt="Olhos do Stomatopoda">
       </section>
     </article>
 
-    <aside>
+    <aside id="conteudo-extra">
       <h2>Veja o Stomatopoda em Ação</h2>
       <a href="https://www.youtube.com/watch?v=E0Li1k5hGBE&ab_channel=NatGeoWILD" target="_blank"
         rel="noopener noreferrer">Mantis Shrimp Packs a Punch | Predator in Paradise</a>
     </aside>
 
-    <section>
+    <section id="referencias">
       <h2>Referências</h2>
       <a href="https://pt.wikipedia.org/wiki/Stomatopoda" target="_blank"
         rel="noopener noreferrer">wikipedia-Stomatopoda</a>
@@ -101,7 +101,7 @@
         rel="noopener noreferrer">Figgys-Fatos sobre Camarão Mantis</a>
     </section>
 
-    <footer>
+    <footer id="rodape">
       <p>Conteúdo compilado por Degemar Pereira da Silva, 2021</p>
     </footer>
   </main>
