Requisito 1 do exercicio 5.1 feito

--- a/Fundamentos/bloco-05-javascript-dom-eventos-e-web-storage/dia-01-javascript-dom-e-seletores/index.html
+++ b/Fundamentos/bloco-05-javascript-dom-eventos-e-web-storage/dia-01-javascript-dom-e-seletores/index.html
@@ -57,6 +57,8 @@
     Crie uma função que modifique todo o texto da tag <p> para maiúsculo.
     Crie uma função que exiba o conteúdo de todas as tags <p> no console.
     */
+
+    document.getElementsByTagName('p')[1].innerText = "Daqui a dois anos me imagino trabalhando como desenvolvedor Web em uma boa empresa e com o título de mestre.";
   </script>
 </body>
 
