Requisito 2 do exercicio 5.1 feito

--- a/Fundamentos/bloco-05-javascript-dom-eventos-e-web-storage/dia-01-javascript-dom-e-seletores/index.html
+++ b/Fundamentos/bloco-05-javascript-dom-eventos-e-web-storage/dia-01-javascript-dom-e-seletores/index.html
@@ -59,6 +59,8 @@
     */
 
     document.getElementsByTagName('p')[1].innerText = "Daqui a dois anos me imagino trabalhando como desenvolvedor Web em uma boa empresa e com o título de mestre.";
+
+    document.getElementsByClassName('main-content')[0].style.background = 'rgb(76,164,109)';
   </script>
 </body>
 
