--- a/Fundamentos/bloco-05-javascript-dom-eventos-e-web-storage/dia-01-javascript-dom-e-seletores/index.html
+++ b/Fundamentos/bloco-05-javascript-dom-eventos-e-web-storage/dia-01-javascript-dom-e-seletores/index.html
@@ -65,6 +65,11 @@
     document.getElementsByClassName('center-content')[0].style.background = 'white';
 
     document.getElementsByClassName('title')[0].innerText = 'Exercício 5.1 - JavaScript';
+
+    for (let i = 0; i < document.getElementsByTagName('p').length; i += 1) {
+      document.getElementsByTagName('p')[i].style.textTransform = 'uppercase';
+    }
+    
   </script>
 </body>
 
