--- a/Fundamentos/bloco-05-javascript-dom-eventos-e-web-storage/dia-01-javascript-dom-e-seletores/index.html
+++ b/Fundamentos/bloco-05-javascript-dom-eventos-e-web-storage/dia-01-javascript-dom-e-seletores/index.html
@@ -69,6 +69,10 @@
     for (let i = 0; i < document.getElementsByTagName('p').length; i += 1) {
       document.getElementsByTagName('p')[i].style.textTransform = 'uppercase';
     }
+
+    for (let i = 0; i < document.getElementsByTagName('p').length; i += 1) {
+      console.log(document.getElementsByTagName('p')[i].innerHTML);
+    }
     
   </script>
 </body>
