--- a/Fundamentos/bloco-05-javascript-dom-eventos-e-web-storage/dia-02-javascript-trabalhando-com-elementos/index.html
+++ b/Fundamentos/bloco-05-javascript-dom-eventos-e-web-storage/dia-02-javascript-trabalhando-com-elementos/index.html
@@ -59,11 +59,16 @@
 
 <body>
   <script>
-      // COLOQUE SEU CÓDIGO AQUI
       let tagBody = document.querySelector('body');
       let bodyH1 = document.createElement('h1');
-      bodyH1.innerText = "Exercício 5.2 - JavaScript DOM";
+      bodyH1.innerText = 'Exercício 5.2 - JavaScript DOM';
       tagBody.appendChild(bodyH1);
+
+      let bodyMain = document.createElement('main');
+      bodyMain.className = 'main-content';
+      tagBody.appendChild(bodyMain);
+
+      
   </script>
 </body>
 
