Requito 3 do exercicio 5.2 feito

--- a/Fundamentos/bloco-05-javascript-dom-eventos-e-web-storage/dia-02-javascript-trabalhando-com-elementos/index.html
+++ b/Fundamentos/bloco-05-javascript-dom-eventos-e-web-storage/dia-02-javascript-trabalhando-com-elementos/index.html
@@ -68,7 +68,9 @@
       bodyMain.className = 'main-content';
       tagBody.appendChild(bodyMain);
 
-      
+      let mainSection1 = document.createElement('section');
+      mainSection1.className = 'center-content';
+      bodyMain.appendChild(mainSection1);
   </script>
 </body>
 
