Requito 4 do exercicio 5.2 feito

--- a/Fundamentos/bloco-05-javascript-dom-eventos-e-web-storage/dia-02-javascript-trabalhando-com-elementos/index.html
+++ b/Fundamentos/bloco-05-javascript-dom-eventos-e-web-storage/dia-02-javascript-trabalhando-com-elementos/index.html
@@ -71,6 +71,10 @@
       let mainSection1 = document.createElement('section');
       mainSection1.className = 'center-content';
       bodyMain.appendChild(mainSection1);
+
+      let section1P = document.createElement('p');
+      section1P.innerText = 'Parágrafo de teste';
+      mainSection1.appendChild(section1P);
   </script>
 </body>
 
