Requito 6 do exercicio 5.2 feito

--- a/Fundamentos/bloco-05-javascript-dom-eventos-e-web-storage/dia-02-javascript-trabalhando-com-elementos/index.html
+++ b/Fundamentos/bloco-05-javascript-dom-eventos-e-web-storage/dia-02-javascript-trabalhando-com-elementos/index.html
@@ -80,6 +80,10 @@
     let mainSection2 = document.createElement('section');
     mainSection2.className = 'left-content';
     bodyMain.appendChild(mainSection2);
+
+    let mainSection3 = document.createElement('section');
+    mainSection3.className = 'right-content';
+    bodyMain.appendChild(mainSection3);
   </script>
 </body>
 
