Requito 7 do exercicio 5.2 feito

--- a/Fundamentos/bloco-05-javascript-dom-eventos-e-web-storage/dia-02-javascript-trabalhando-com-elementos/index.html
+++ b/Fundamentos/bloco-05-javascript-dom-eventos-e-web-storage/dia-02-javascript-trabalhando-com-elementos/index.html
@@ -84,6 +84,11 @@
     let mainSection3 = document.createElement('section');
     mainSection3.className = 'right-content';
     bodyMain.appendChild(mainSection3);
+
+    let image = document.createElement('img');
+    image.src = 'https://picsum.photos/200';
+    image.className = 'small-image';
+    mainSection2.appendChild(image);
   </script>
 </body>
 
