Requito 9 do exercicio 5.2 feito

--- a/Fundamentos/bloco-05-javascript-dom-eventos-e-web-storage/dia-02-javascript-trabalhando-com-elementos/index.html
+++ b/Fundamentos/bloco-05-javascript-dom-eventos-e-web-storage/dia-02-javascript-trabalhando-com-elementos/index.html
@@ -104,6 +104,14 @@
       listUl.appendChild(listLi);
     }
 
+    for (let i = 0; i < 3; i += 1) {
+      let mainH3 = document.createElement('h3');
+
+      mainH3.innerText = 'Texto H3 para teste';
+
+      bodyMain.appendChild(mainH3);
+    }
+
   </script>
 </body>
 
