--- a/Fundamentos/bloco-06-html-e-css-forms-flexbox-e-responsivo/dia-01-html-css-forms/form.html
+++ b/Fundamentos/bloco-06-html-e-css-forms-flexbox-e-responsivo/dia-01-html-css-forms/form.html
@@ -1,44 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-  <form action="" method="post">
-    <fieldset>
-      <label for="">Nome</label>
-      <input type="text" maxlength="40" required>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- CSS only -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="style.css" />
+    <title>Document</title>
+  </head>
+  <body>
+    <form action="" method="post">
+      <section class="container-sm mb-3">
+        <div class="mb-3">
+          <label for="" class="form-label">Nome</label>
+          <input type="text" class="form-control" maxlength="40" required />
+        </div>
 
-      <label for="">Email</label>
-      <input type="text" maxlength="50" required>
+        <label for="" class="form-label">Email</label>
+        <input type="text" class="form-control" maxlength="50" required />
 
-      <label for="">CPF</label>
-      <input type="text" maxlength="11" required>
+        <label for="" class="form-label">CPF</label>
+        <input type="text" class="form-control" maxlength="11" required />
 
-      <label for="">Endereço</label>
-      <input type="text" maxlength="200" required>
+        <label for="" class="form-label">Endereço</label>
+        <input type="text" class="form-control" maxlength="200" required />
 
-      <label for="">Cidade</label>
-      <input type="text" maxlength="28" required>
+        <label for="" class="form-label">Cidade</label>
+        <input type="text" class="form-control" maxlength="28" required />
 
-      <label for="">Estado</label>
-      <select name="" id="" required></select>
+        <label for="" class="form-label">Estado</label>
+        <select name="" id="" class="form-control" required></select>
 
-      <label for="" name="tipo-residencia">Tipo</label>
-      <input type="radio" name="tipo-residencia">Casa
-      <input type="radio" name="tipo-residencia" required>Apartamento
-    </fieldset>
+        <label for="" name="tipo-residencia" class="form-label">Tipo</label>
+        <input type="radio" name="tipo-residencia" />Casa
+        <input type="radio" name="tipo-residencia" required />Apartamento
 
-    <fieldset>
-      <label for="">Resumo do Currículo</label><br>
-      <textarea name="" id="" cols="30" rows="10" maxlength="1000" required></textarea>
+        <label for="" class="form-label">Resumo do Currículo</label>
+        <textarea
+          name=""
+          id=""
+          cols="30"
+          rows="10"
+          maxlength="1000"
+          required
+        ></textarea>
 
-      <label for="">Cargo</label>
-      <input type="text" maxlength="40" required>
-    </fieldset>
-  </form>
-</body>
+        <label for="" class="form-label">Cargo</label>
+        <input type="text" class="form-control" maxlength="40" required />
+
+        <label for="" class="form-label">Descrição do Cargo</label>
+        <input type="text" class="form-control" maxlength="40" required />
+
+        <label for="date" class="form-label">Data de Início</label>
+        <input id="date-camp"type="date" class="form-control" name="date" required />
+      </section>
+
+      <div class="container mb-3">
+        <button type="reset">Limpar</button>
+      </div>
+    </form>
+  </body>
 </html>
